--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -14,5 +14,9 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4"
+  },
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "yargs": "^13.2.2"
   }
 }
