Added geocode api utility for finding location

--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -23,5 +23,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "request": "^2.88.0"
+  }
 }
