--- a/web-server/package.json
+++ b/web-server/package.json
@@ -25,6 +25,7 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "hbs": "^4.0.3"
   }
 }
