--- a/web-server/package.json
+++ b/web-server/package.json
@@ -25,7 +25,9 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "hbs": "^4.0.3"
+    "hbs": "^4.0.3",
+    "request": "^2.88.0"
   }
 }
